tests/profile/error/keybinding/wrongtype_guipath.profile
{
  "version": { "major": 12, "minor": 13 },
  "keybindings": [
    {
      "key": "T",
      "documentation": "T documentation",
      "name": "T name",
      "gui_path": 1.0,
      "is_local": true,
      "script": "T script"
    }
  ]
}
